# js-component-tools

./: Cargo.toml  package.json
crates/js-component-bindgen-component/src/: lib.rs
crates/wasm-tools-component/src/: lib.rs
crates/wasm-xdr-tools-component/: Cargo.toml
crates/wasm-xdr-tools-component/src/: lib.rs
crates/wasm-xdr-tools-component/wit/: wasm-tools.wit
test/: xdr.js
xdr/: wasm-xdr-tools.core.wasm  wasm-xdr-tools.js  wasm-xdr-tools.wasm
xdr/exports/: exports.d.ts
