[package]
name = "wasm-xdr-tools-js"
publish = false
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
test = false
doctest = false

[dependencies]
anyhow = { workspace = true }
wit-bindgen-guest-rust = { workspace = true, features = ['default'] }
strval = { git = "https://github.com/AhaLabs/soroban-tools", rev = "0b569a664b193bf269676c9bd27d216c897f0985"}
serde_json = "1.0.82"

[dependencies.soroban-env-host]
version = "0.0.12"
git = "https://github.com/stellar/rs-soroban-env"
rev = "993c527abce72748405d71467498bffd63e061c1"
