[package]
name = "wasm-xdr-tools-js"
publish = false
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
test = false
doctest = false

[dependencies]
anyhow = { workspace = true }
wit-bindgen-guest-rust = { workspace = true, features = ['default'] }
strval = { git = "https://github.com/AhaLabs/soroban-tools", rev = "539a9490d882ac442321cea8d44ed4f8952eaeed"}
# strval = { path = "../../../s/soroban-cli/cmd/strval" }
serde_json = "1.0.82"

[dependencies.soroban-env-host]
version = "0.0.12"
git = "https://github.com/stellar/rs-soroban-env"
rev = "993c527abce72748405d71467498bffd63e061c1"
